added conditions to function add()

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,8 @@ div{
 
 @media all and (max-width: 500px) {
     div{
-        width: 250px;
+      width: 80vw;
+       margin:20px auto;
     }
     
 }
