--- a/css/styles.css
+++ b/css/styles.css
@@ -7,24 +7,51 @@ li{
     width: 400px;
 }
 
-#container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
 .button-class{
     color: green;;
 }
-
-#modal{
+.modal-container {
+    display: none;
+  }
+.modal-container.is-visible{
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    /* to show it above other content */
+    z-index: 10; 
+    background: rgba(0, 0, 0, 0.5);
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto; 
+    
+    /* this is used to center the modal */
+    display: grid;
+    text-align: center;
+}
+.modal{
     margin: auto;
     display: inline-block;
     box-sizing: border-box;
     background: #fff;
     padding: 15px;
-    width: 100%;
+ 
+    width: 25%;
     max-width: 700px;
-    text-align: left;
+    text-align: center;
+}
+.modal h1{
+    text-align: center;
+}
+.modal img{
+ float:right;
+
+}
+.modal p{
+ text-align: left;
 }
 @media all and (max-width: 500px) {
     div{
