--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,66 @@
-li{
-    border: 2px solid rgb(7, 228, 73);
-    border-radius: 15px;
-    padding: 10px;
-    text-align: left;
-    margin: 30px auto;
-    width: 400px;
+:root {
+    --primary-color:rgb(193, 206, 193);
+    --secondary-color: rgb(222, 239, 222);
+    --third-color: rgb(65, 226, 247);
 }
 
-.button-class{
-    color: green;;
+
+* {
+    font-family: 'Rubik', sans-serif;
+}
+
+.title {
+    display: grid;
+    text-align: center;
+}
+
+ul,
+li {
+    list-style: none;
+    margin: 10px auto;
+    width: 400px;
+    justify-content: center;
+}
+ul{
+    border: 2px solid var(--primary-color);
+    border-radius: 15px;
+}
+li:first-child {
+    margin-top: 0px;
+}
+
+li:last-child {
+    margin-bottom: 0px;
+}
+
+ul {
+    padding-inline-start: 0;
+    padding: 10px;
+}
+
+.button-class {
+    color: black;
+    height: 100%;
+    width: 100%;
+    background-color: var(--secondary-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 13px;
+    padding: 15px;
+    margin: none;
+    text-transform: uppercase;
+    transition: 0.3s ease;
+}
+.button-class:hover {
+    background-color: var(--primary-color); 
+    border-color: var(--third-color); 
+    opacity: 0.8;
+    transform: scale(1.03);
 }
 .modal-container {
     display: none;
-  }
-.modal-container.is-visible{
+}
+
+.modal-container.is-visible {
     position: fixed;
     padding: 20px;
     box-sizing: border-box;
@@ -21,49 +68,52 @@ li{
     left: 0;
     width: 100%;
     height: 100%;
-    
+
     /* to show it above other content */
-    z-index: 10; 
+    z-index: 10;
     background: rgba(0, 0, 0, 0.5);
     /* to allow scrolling if the screen is not high enough*/
-    overflow: auto; 
-    
+    overflow: auto;
+
     /* this is used to center the modal */
     display: grid;
     text-align: center;
 }
-.modal{
+
+.modal {
     margin: auto;
     display: inline-block;
     box-sizing: border-box;
     background: #fff;
     padding: 15px;
- 
+
     width: 25%;
     max-width: 700px;
     text-align: center;
 }
-.modal h1{
+
+.modal h1 {
     text-align: center;
+    text-transform: uppercase;
 }
-.modal img{
- float:right;
+
+.modal img {
+    float: right;
 
 }
-.modal p{
- text-align: left;
+
+.modal p {
+    text-align: left;
+}
+.modal button{
+
 }
 @media all and (max-width: 500px) {
-    div{
-      width: 80vw;
-       margin:20px auto;
-    }
-    
+ 
+
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
-    div{
-        width: 320px;
-    }
-    
+  
+
 }
