--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,19 @@
 :root {
-    --primary-color:rgb(193, 206, 193);
+    --primary-color: rgb(193, 206, 193);
     --secondary-color: rgb(222, 239, 222);
     --third-color: rgb(65, 226, 247);
 }
 
-
+body{
+    width: 100vw;
+}
 * {
     font-family: 'Rubik', sans-serif;
 }
 
 .title {
-    display: grid;
+    display: flex;
+    justify-content: center;
     text-align: center;
 }
 
@@ -21,10 +24,12 @@ li {
     width: 400px;
     justify-content: center;
 }
-ul{
+
+ul {
     border: 2px solid var(--primary-color);
     border-radius: 15px;
 }
+
 li:first-child {
     margin-top: 0px;
 }
@@ -50,12 +55,14 @@ ul {
     text-transform: uppercase;
     transition: 0.3s ease;
 }
+
 .button-class:hover {
-    background-color: var(--primary-color); 
-    border-color: var(--third-color); 
+    background-color: var(--primary-color);
+    border-color: var(--third-color);
     opacity: 0.8;
     transform: scale(1.03);
 }
+
 .modal-container {
     display: none;
 }
@@ -88,21 +95,21 @@ ul {
     padding: 15px;
     display: grid;
     position: relative;
-    width: auto; 
-    grid-template-columns: 1fr 1fr;
+    width: 400px;
+    grid-template-columns: 90% 10%;
     align-items: center;
     max-width: 700px;
 }
 
-.modal h1 {
+.modal-h1{
     text-transform: uppercase;
     margin-top: 0px;
-    grid-column: 1; 
-
+    grid-column: 1;
+    text-align: left;
 }
 
 .modal img {
-    justify-self: center; 
+    justify-self: center;
     align-self: center;
     width: 60%;
     grid-column: span 2;
@@ -112,8 +119,9 @@ ul {
     grid-column: span 2;
     margin-bottom: 0;
 }
-.modal button{
-    grid-column: 2; 
+
+.modal button {
+    grid-column: 2;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -122,12 +130,18 @@ ul {
     font-size: 20px;
     cursor: pointer;
 }
+
 @media all and (max-width: 500px) {
- 
+
+    .modal {
+        width: 300px;
+    }
 
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
-  
 
+    .modal {
+        width: 350px;
+    }
 }
