--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,23 @@ body {
     box-sizing: border-box;
 }
 
+body.modal-open .modal {
+    overflow: hidden;
+}
 * {
     font-family: 'Rubik', sans-serif;
 }
 
-ul,
-li {
-
-    margin: 5px auto;
-    width: 400px;
+main {
+    margin: auto;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 5px;
+    background-image: url("../img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-clip: padding-box;
 }
 
 .button-class {
@@ -38,7 +46,9 @@ li {
     opacity: 0.8;
     transform: scale(1.03);
 }
-
+.button-class:focus{
+    outline: none;
+}
 input.form-control:focus {
     border-color: inherit;
     box-shadow: none;
@@ -54,12 +64,7 @@ input.form-control:focus {
 .btn:focus{
     box-shadow: none;
 }
-main {
-    background-image: url("../img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
+
 .modal-dialog {
     margin: 15% auto;
     width: 450px;
@@ -79,16 +84,27 @@ main {
     margin-bottom: 0;
 }  */
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 575px) {
     .modal-dialog {
-        width: 300px;
+        width: 250px;
     }
     .img-pokemon{
         height: 50px;
     }
+    main {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .button-class {
+        font-size: 13px;
+    }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
+    main {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
     .modal-dialog {
         width: 300px;
     }
