--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@ body.modal-open .modal {
 
 main {
     margin: auto;
-    padding-left: 80px;
-    padding-right: 80px;
+    padding-left: 120px;
+    padding-right: 120px;
     padding-top: 5px;
     background-image: url("../img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg");
     background-size: cover;
@@ -36,18 +36,21 @@ main {
     border-radius: 13px;
     padding: 15px;
     margin: none;
+    opacity: 0.95;
     text-transform: uppercase;
     transition: 0.3s ease;
 }
 
 .button-class:hover {
     background-color: var(--primary-color);
-    border-color: var(--third-color);
+    border: 2px solid var(--third-color);;
+    box-shadow: 0 0 15px rgba(65, 226, 247, 0.7); 
     opacity: 0.8;
     transform: scale(1.03);
 }
 .button-class:focus{
     outline: none;
+    border: 2px solid var(--third-color);;
 }
 input.form-control:focus {
     border-color: inherit;
