--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,17 @@ input.form-control:focus {
     margin: 15% auto;
     width: 450px;
 }
-
+.no-pokemon-message{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    opacity: 0.8;
+    background-color: var(--third-color);
+    padding: 2px;
+    border-radius: 10px;
+}
 .modal-title {
     text-transform: uppercase;
 }
