--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ main{
 body, html {
     height: 100%;
     margin: 0;
-    background-image: url("/img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg");
+    background-image: url("../img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
