fixed background for iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,30 @@ body,
 html {
     height: 100%;
     margin: 0;
-    background-image: url("../img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg") no-repeat center;
-    /* background-size: cover;
+    padding: 0;
+}
+
+.background {
+    background-image: url("../img/grass_with_river_background_by_willdinomaster55_df0dwcb-pre.jpg");
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; */
+    background-position: center;
+    z-index: -1;
+}
+
+.content {
+    z-index: 1;
+    /* Higher than the background's z-index */
+    overflow: auto;
+    height: 100%;
+    overflow-y: auto;
+    /* Enables vertical scrolling */
+    -webkit-overflow-scrolling: touch;
 }
 
 .modal {
