--- a/css/styles.css
+++ b/css/styles.css
@@ -78,8 +78,6 @@ main {
 .button-class:hover {
     background-color: var(--primary-color);
     border: 2px solid var(--third-color);
-    ;
-    /* box-shadow: 0 0 15px rgba(65, 226, 247, 0.7);  */
     opacity: 0.8;
     transform: scale(1.04);
 }
@@ -128,6 +126,7 @@ input.form-control:focus {
 }
 
 .modal-title {
+    font-weight: bold;
     text-transform: uppercase;
 }
 
@@ -136,10 +135,10 @@ input.form-control:focus {
 
 }
 
-/* .modal-dialog p {
-    grid-column: span 2;
-    margin-bottom: 0;
-}  */
+.modal-body {
+    display: grid;
+    justify-items: center;
+}
 
 @media all and (max-width: 575px) {
     .modal-dialog {
