--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ input.form-control:focus {
     border-width: 0.4em;
     opacity: 0.6;
     animation-duration: 1.1s;
+    z-index: 999;
 }
 
 .hide {
